1.cxf报错问题 2.区域管理改为投料点管理

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -146,15 +146,15 @@
   </error-page>
 
   <!-- 加入CXF支持 -->
-  <servlet>
-    <servlet-name>webService</servlet-name>
-    <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
-    <load-on-startup>3</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>webService</servlet-name>
-    <url-pattern>/ws/*</url-pattern>
-  </servlet-mapping>
+  <!--<servlet>-->
+    <!--<servlet-name>webService</servlet-name>-->
+    <!--<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>-->
+    <!--<load-on-startup>3</load-on-startup>-->
+  <!--</servlet>-->
+  <!--<servlet-mapping>-->
+    <!--<servlet-name>webService</servlet-name>-->
+    <!--<url-pattern>/ws/*</url-pattern>-->
+  <!--</servlet-mapping>-->
 
 
 
