--- a/src/main/resources/rad.properties
+++ b/src/main/resources/rad.properties
@@ -26,8 +26,8 @@ jdbc.type=mysql
 #jdbc.driver=com.mysql.jdbc.Driver     
 # mysql8 \uFFFD\u6C7E\u0434\uFFFD\uFFFD
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/2021whpbd?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
-#jdbc.url=jdbc:mysql://localhost:3306/2020whpbd_new?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
+jdbc.url=jdbc:mysql://172.16.2.91:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
+#jdbc.url=jdbc:mysql://localhost:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
 jdbc.username=root
 jdbc.password=KF@32rjb
 # jdbc.password=root
@@ -49,8 +49,10 @@ jdbc.testSql=SELECT 'x' FROM DUAL
 
 #redis settings
 redis.keyPrefix=crrcdt
-redis.host=127.0.0.1
+redis.host=172.16.2.91
 redis.port=6379
+redis.password=123456
+redis.timeout=30000
 
 
 #============================#
