节假日模块增加时间范围查询;页面样式修改

--- a/src/main/resources/rad.properties
+++ b/src/main/resources/rad.properties
@@ -27,9 +27,8 @@ jdbc.type=mysql
 # mysql8 \uFFFD\u6C7E\u0434\uFFFD\uFFFD
 jdbc.driver=com.mysql.cj.jdbc.Driver
 
-jdbc.url=jdbc:mysql://localhost:3306/2021whpbd?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
-#jdbc.url=jdbc:mysql://localhost:3306/2020whpbd_new?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
-
+jdbc.url=jdbc:mysql://172.16.2.91:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
+#jdbc.url=jdbc:mysql://localhost:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
 
 
 jdbc.username=root
