1.假期管理bug修改 2.用户批量充值

--- a/src/main/resources/rad.properties
+++ b/src/main/resources/rad.properties
@@ -77,7 +77,7 @@ ws.ip=127.0.0.1
 #============================#
 
 #\u4EA7\u54C1\u4FE1\u606F\u8BBE\u7F6E
-productName=\u4E2D\u8F66\u6D66\u9547\u5E9E\u5DF4\u8FEAMMIS\u7CFB\u7EDF
+productName=\u6d66\u9547\u516c\u53f8\u667a\u80fd\u70b9\u9910\u7cfb\u7edf
 copyrightYear=2020
 version=V1.0
 
