--- a/src/main/resources/rad.properties
+++ b/src/main/resources/rad.properties
@@ -51,11 +51,12 @@ jdbc.pool.maxActive=20
 jdbc.testSql=SELECT 'x' FROM DUAL
 
 #redis settings
-redis.keyPrefix=crrcdt
+redis.keyPrefix=pzzndc
 redis.host=172.16.2.91
 redis.port=6379
 redis.password=123456
 redis.timeout=30000
+
 
 
 #============================#
