--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>crrcdt</groupId>
-  <artifactId>MMIS</artifactId>
-  <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>MMIS Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  
-<!-- 项目属性 -->
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>crrcdt</groupId>
+	<artifactId>MMIS</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>MMIS Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+
+	<!-- 项目属性 -->
 	<properties>
-		
+
 		<!-- main version setting -->
 		<spring.version>4.2.0.RELEASE</spring.version>
 		<validator.version>5.2.4.Final</validator.version>
@@ -22,7 +22,7 @@
 		<shiro.version>1.2.3</shiro.version>
 		<sitemesh.version>2.4.2</sitemesh.version>
 		<activiti.version>5.15.1</activiti.version>
-		
+
 		<!-- 工具类 版本设置 -->
 		<slf4j.version>1.7.7</slf4j.version>
 		<commons-lang.version>2.6</commons-lang.version>
@@ -48,7 +48,7 @@
 		<mysql.driver.version>8.0.11</mysql.driver.version>
 		<oracle.driver.version>10.2.0.4.0</oracle.driver.version>
 		<mssql.driver.version>1.3.1</mssql.driver.version>
-	    
+
 		<!-- 环境 配置 -->
 		<jdk.version>1.8</jdk.version>
 		<tomcat.version>2.2</tomcat.version>
@@ -56,40 +56,40 @@
 		<webserver.port>8181</webserver.port>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<downloadSources>true</downloadSources>
-		
+
 		<!-- webService -->
-    	<cxf.version>3.2.4</cxf.version>
-    	
-    	<!-- quartz -->
-    	<quartz.version>2.2.3</quartz.version>
-    	
-    
+		<cxf.version>3.2.4</cxf.version>
+
+		<!-- quartz -->
+		<quartz.version>2.2.3</quartz.version>
+
+
 	</properties>
-	
-	
-		<!-- 设定主仓库，按设定顺序进行查找。 -->
+
+
+	<!-- 设定主仓库，按设定顺序进行查找。 -->
 	<repositories>
 		<!--<repository>-->
-			<!--<releases>-->
-				<!--<enabled>false</enabled>-->
-			<!--</releases>-->
-			<!--<snapshots>-->
-				<!--<enabled>true</enabled>-->
-			<!--</snapshots>-->
-			<!--<id>ias-snapshots</id>-->
-			<!--<name>Infinite Automation Snapshot Repository</name>-->
-			<!--<url>https://maven.mangoautomation.net/repository/ias-snapshot/</url>-->
+		<!--<releases>-->
+		<!--<enabled>false</enabled>-->
+		<!--</releases>-->
+		<!--<snapshots>-->
+		<!--<enabled>true</enabled>-->
+		<!--</snapshots>-->
+		<!--<id>ias-snapshots</id>-->
+		<!--<name>Infinite Automation Snapshot Repository</name>-->
+		<!--<url>https://maven.mangoautomation.net/repository/ias-snapshot/</url>-->
 		<!--</repository>-->
 		<!--<repository>-->
-			<!--<releases>-->
-				<!--<enabled>true</enabled>-->
-			<!--</releases>-->
-			<!--<snapshots>-->
-				<!--<enabled>false</enabled>-->
-			<!--</snapshots>-->
-			<!--<id>ias-releases</id>-->
-			<!--<name>Infinite Automation Release Repository</name>-->
-			<!--<url>https://maven.mangoautomation.net/repository/ias-release/</url>-->
+		<!--<releases>-->
+		<!--<enabled>true</enabled>-->
+		<!--</releases>-->
+		<!--<snapshots>-->
+		<!--<enabled>false</enabled>-->
+		<!--</snapshots>-->
+		<!--<id>ias-releases</id>-->
+		<!--<name>Infinite Automation Release Repository</name>-->
+		<!--<url>https://maven.mangoautomation.net/repository/ias-release/</url>-->
 		<!--</repository>-->
 
 		<repository>
@@ -104,36 +104,36 @@
 			<url>http://central.maven.org/maven2/</url>
 		</repository>
 	</repositories>
-	
+
 	<!-- 设定插件仓库 -->
-	<pluginRepositories> 
+	<pluginRepositories>
 		<pluginRepository>
 			<id>crrcdt-repos</id>
 			<name>crrcdt Repository</name>
 			<url>http://maven.aliyun.com/nexus/content/groups/public</url>
 		</pluginRepository>
-	</pluginRepositories> 
-	
-	
-		<!-- 依赖项定义 -->
+	</pluginRepositories>
+
+
+	<!-- 依赖项定义 -->
 	<dependencies>
 		<!--<dependency>-->
-			<!--<groupId>com.infiniteautomation</groupId>-->
-			<!--<artifactId>modbus4j</artifactId>-->
-			<!--<version>3.0.3</version>-->
+		<!--<groupId>com.infiniteautomation</groupId>-->
+		<!--<artifactId>modbus4j</artifactId>-->
+		<!--<version>3.0.3</version>-->
 		<!--</dependency>-->
 
 		<!--&lt;!&ndash; https://mvnrepository.com/artifact/net.wimpi/jamod &ndash;&gt;-->
 		<!--<dependency>-->
-			<!--<groupId>net.wimpi</groupId>-->
-			<!--<artifactId>jamod</artifactId>-->
-			<!--<version>1.2</version>-->
+		<!--<groupId>net.wimpi</groupId>-->
+		<!--<artifactId>jamod</artifactId>-->
+		<!--<version>1.2</version>-->
 		<!--</dependency>-->
 		<!--&lt;!&ndash; https://mvnrepository.com/artifact/com.digitalpetri.modbus/modbus-slave-tcp &ndash;&gt;-->
 		<!--<dependency>-->
-			<!--<groupId>com.digitalpetri.modbus</groupId>-->
-			<!--<artifactId>modbus-slave-tcp</artifactId>-->
-			<!--<version>1.1.1</version>-->
+		<!--<groupId>com.digitalpetri.modbus</groupId>-->
+		<!--<artifactId>modbus-slave-tcp</artifactId>-->
+		<!--<version>1.1.1</version>-->
 		<!--</dependency>-->
 		<!-- https://mvnrepository.com/artifact/org.artofsolving.jodconverter/jodconverter-core -->
 		<!-- email -->
@@ -208,7 +208,7 @@
 			<artifactId>spring-tx</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-			
+
 		<!-- spring orm -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -220,7 +220,7 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<!-- bean validate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -228,7 +228,7 @@
 			<version>${validator.version}</version>
 		</dependency>
 		<!-- SPRING end -->
-		
+
 		<!-- AOP begin -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -246,9 +246,9 @@
 			<version>3.1</version>
 		</dependency>
 		<!-- AOP end -->
-		
+
 		<!-- PERSISTENCE begin -->
-		
+
 		<!-- MyBatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
@@ -260,14 +260,14 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>${mybatis-spring.version}</version>
 		</dependency>
-		
+
 		<!-- connection pool -->
 		<dependency>
-		     <groupId>com.alibaba</groupId>
-		     <artifactId>druid</artifactId>
-		     <version>${druid.version}</version>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>${druid.version}</version>
 		</dependency>
-		
+
 		<!-- jdbc driver -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -319,9 +319,9 @@
 			<version>${cxf.version}</version>
 		</dependency>
 		<!--<dependency>-->
-			<!--<groupId>org.apache.cxf</groupId>-->
-			<!--<artifactId>cxf-rt-ws-security</artifactId>-->
-			<!--<version>${cxf.version}</version>-->
+		<!--<groupId>org.apache.cxf</groupId>-->
+		<!--<artifactId>cxf-rt-ws-security</artifactId>-->
+		<!--<version>${cxf.version}</version>-->
 		<!--</dependency>-->
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
@@ -336,16 +336,16 @@
 
 		<!-- https://mvnrepository.com/artifact/org.apache.axis/axis -->
 		<!--<dependency>-->
-			<!--<groupId>org.apache.axis</groupId>-->
-			<!--<artifactId>axis</artifactId>-->
-			<!--<version>1.4</version>-->
+		<!--<groupId>org.apache.axis</groupId>-->
+		<!--<artifactId>axis</artifactId>-->
+		<!--<version>1.4</version>-->
 		<!--</dependency>-->
 
 		<!-- https://mvnrepository.com/artifact/org.apache.axis/axis-jaxrpc -->
 		<!--<dependency>-->
-			<!--<groupId>org.apache.axis</groupId>-->
-			<!--<artifactId>axis-jaxrpc</artifactId>-->
-			<!--<version>1.4</version>-->
+		<!--<groupId>org.apache.axis</groupId>-->
+		<!--<artifactId>axis-jaxrpc</artifactId>-->
+		<!--<version>1.4</version>-->
 		<!--</dependency>-->
 
 		<!-- webService:End of CXF Dependencies -->
@@ -425,17 +425,17 @@
 			<version>${ehcache.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>net.sf.ehcache</groupId>  
-			<artifactId>ehcache-web</artifactId>  
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache-web</artifactId>
 			<version>${ehcache-web.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			 <version>2.5.1</version>
+			<version>2.5.1</version>
 		</dependency>
 		<!-- CACHE end -->
-		
+
 		<!-- SECURITY begin -->
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
@@ -469,7 +469,7 @@
 			<version>${shiro.version}</version>
 		</dependency>
 		<!-- SECURITY end -->
-		
+
 		<!-- Activiti -->
 		<dependency>
 			<groupId>org.activiti</groupId>
@@ -503,21 +503,21 @@
 		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-modeler</artifactId>
-            <version>${activiti.version}</version>
+			<version>${activiti.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-diagram-rest</artifactId>
 			<version>${activiti.version}</version>
 		</dependency>
-		
+
 		<!-- 支持activiti缓存 -->
 		<!-- <dependency>
 			<groupId>org.infinispan</groupId>
 			<artifactId>infinispan-core</artifactId>
 			<version>5.1.7.Final</version>
 		</dependency> -->
-		
+
 		<!-- LOGGING begin -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -542,7 +542,7 @@
 			<version>${slf4j.version}</version>
 		</dependency>
 		<!-- LOGGING end -->
-		
+
 		<!-- GENERAL UTILS begin -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -559,7 +559,7 @@
 
 		<dependency>
 			<groupId>commons-lang</groupId>
-  			<artifactId>commons-lang</artifactId>
+			<artifactId>commons-lang</artifactId>
 			<version>${commons-lang.version}</version>
 		</dependency>
 		<dependency>
@@ -573,9 +573,9 @@
 			<version>${commons-codec.version}</version>
 		</dependency>
 		<dependency>
-		    <groupId>commons-fileupload</groupId>
-		    <artifactId>commons-fileupload</artifactId>
-		    <version>${commons-fileupload.version}</version>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${commons-fileupload.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
@@ -588,19 +588,19 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<!-- quartz 定时任务 -->
 		<dependency>
-		    <groupId>org.quartz-scheduler</groupId>
-		    <artifactId>quartz</artifactId>
-		    <version>${quartz.version}</version>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>${quartz.version}</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.quartz-scheduler</groupId>
-		    <artifactId>quartz-jobs</artifactId>
-		    <version>${quartz.version}</version>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz-jobs</artifactId>
+			<version>${quartz.version}</version>
 		</dependency>
-		
+
 
 		<!-- google java lib -->
 		<dependency>
@@ -608,7 +608,7 @@
 			<artifactId>guava</artifactId>
 			<version>${guava.version}</version>
 		</dependency>
-		
+
 		<!-- jackson json -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -630,7 +630,7 @@
 			<artifactId>jackson-module-jaxb-annotations</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
-		
+
 		<!-- fastjson json-->
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -645,36 +645,36 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>${gson.version}</version>
-		</dependency> 
-		
+		</dependency>
+
 		<!-- xstream xml -->
 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
 			<version>${xstream.version}</version>
 		</dependency>
-		
+
 		<!-- pojo copy -->
 		<dependency>
 			<groupId>net.sf.dozer</groupId>
 			<artifactId>dozer</artifactId>
 			<version>${dozer.version}</version>
 		</dependency>
-		
+
 		<!-- freemarker engine -->
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
 			<version>${freemarker.version}</version>
 		</dependency>
-		
+
 
 		<dependency>
 			<groupId>javax.activation</groupId>
 			<artifactId>activation</artifactId>
 			<version>1.1.1</version>
 		</dependency>
-		
+
 		<!-- poi office -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -691,14 +691,14 @@
 			<artifactId>poi-ooxml-schemas</artifactId>
 			<version>${poi.version}</version>
 		</dependency>
-		
+
 		<!-- image util -->
 		<dependency>
 			<groupId>com.drewnoakes</groupId>
 			<artifactId>metadata-extractor</artifactId>
 			<version>2.6.2</version>
 		</dependency>
-		
+
 		<!-- 条形码、二维码生成  -->
 		<dependency>
 			<groupId>com.google.zxing</groupId>
@@ -710,7 +710,7 @@
 			<artifactId>javase</artifactId>
 			<version>2.2</version>
 		</dependency>
-		
+
 		<!-- 中文分词 -->
 		<dependency>
 			<groupId>org.wltea</groupId>
@@ -720,7 +720,7 @@
 			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/analyzer-2012_u6.jar</systemPath>
 		</dependency>
 		<!-- GENERAL UTILS end -->
-		
+
 		<!-- CKFinder begin -->
 		<dependency>
 			<groupId>net.coobird</groupId>
@@ -758,7 +758,7 @@
 			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/ckfinderplugin-imageresize-2.3.jar</systemPath>
 		</dependency>
 		<!-- CKFinder end -->
-		
+
 		<!-- TEST begin -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -772,7 +772,7 @@
 			<version>${spring.version}</version>
 		</dependency>
 		<!-- TEST end -->
-		
+
 		<!-- User Agent -->
 		<dependency>
 			<groupId>bitwalker</groupId>
@@ -781,11 +781,11 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/UserAgentUtils-1.13.jar</systemPath>
 		</dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>RELEASE</version>
-        </dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>RELEASE</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
 		<dependency>
 			<groupId>org.sonarsource.scanner.maven</groupId>
@@ -793,13 +793,19 @@
 			<version>3.7.0.1746</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>3.10.6</version>
+		</dependency>
+
 	</dependencies>
-	
-	
+
+
 	<build>
-	
-    	<finalName>zjxy</finalName>
-  
+
+		<finalName>zjxy</finalName>
+
 		<outputDirectory>${project.basedir}/src/main/webapp/WEB-INF/classes/</outputDirectory>
 		<plugins>
 			<plugin>
@@ -832,13 +838,13 @@
 				</configuration>
 			</plugin>
 
-			
+
 			<plugin>
-		      <groupId>org.sonarsource.scanner.maven</groupId>
-		      <artifactId>sonar-maven-plugin</artifactId>
-		      <version>3.7.0.1746</version>
-		    </plugin>
-    
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.7.0.1746</version>
+			</plugin>
+
 			<!-- JSP 预编译插件  jspweb.xml
 			<plugin>
 				<groupId>org.jasig.mojo.jspc</groupId>
@@ -862,7 +868,7 @@
 					</dependency>
 				</dependencies>
 			</plugin>-->
-			
+
 			<!-- Jetty JSP 预编译插件  web.xml
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
@@ -879,7 +885,7 @@
 					</execution>
 				</executions>
 			</plugin>-->
-			
+
 			<!-- 打包jar文件时，配置manifest文件，加入lib包的jar依赖 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -909,7 +915,7 @@
 					</execution>
 				</executions> -->
 			</plugin>
-			
+
 			<!-- 混淆代码
 			<plugin>
 				<groupId>com.github.wvengen</groupId>
@@ -985,7 +991,7 @@
 					<warName>${project.artifactId}</warName>
 				</configuration>
 			</plugin>
-			
+
 			<!-- Eclipse 插件 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -1010,31 +1016,31 @@
 					</additionalProjectnatures>
 				</configuration>
 			</plugin>
-			
+
 			<!-- tomcat6插件 -->
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat6-maven-plugin</artifactId>
-				<version>${tomcat.version}</version> 
+				<version>${tomcat.version}</version>
 				<configuration>
 					<port>${webserver.port}</port>
 					<path>/${project.artifactId}</path>
 					<uriEncoding>${project.build.sourceEncoding}</uriEncoding>
 				</configuration>
 			</plugin>
-			
+
 			<!-- tomcat7插件 -->
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>${tomcat.version}</version> 
+				<version>${tomcat.version}</version>
 				<configuration>
 					<port>${webserver.port}</port>
 					<path>/${project.artifactId}</path>
 					<uriEncoding>${project.build.sourceEncoding}</uriEncoding>
 				</configuration>
 			</plugin>
-			
+
 			<!-- jetty插件 -->
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
@@ -1057,35 +1063,35 @@
 					</systemProperties>
 				</configuration>
 			</plugin>
-			
+
 			<!-- resource插件 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>2.7</version>
 			</plugin>
-			
+
 			<!-- install插件 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-install-plugin</artifactId>
 				<version>2.5.2</version>
 			</plugin>
-			
+
 			<!-- clean插件 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
 				<version>2.6.1</version>
 			</plugin>
-			
+
 			<!-- ant插件 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>1.8</version>
 			</plugin>
-			
+
 			<!-- dependency插件 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
