UserController添加批量重置用户密码以及小程序bug修改

--- a/src/main/resources/rad.properties
+++ b/src/main/resources/rad.properties
@@ -58,6 +58,9 @@ redis.password=123456
 redis.timeout=30000
 redis.address=redis://172.16.2.91:6379
 
+#endEatDateOrEndNotEatDate
+pzorder.endDate=17:00:00
+
 
 
 #============================#
