1.统计修改 2.数据库链接资源改为统一配置文件修改

--- a/src/main/resources/rad.properties
+++ b/src/main/resources/rad.properties
@@ -28,7 +28,7 @@ jdbc.type=mysql
 jdbc.driver=com.mysql.cj.jdbc.Driver
 
 jdbc.url=jdbc:mysql://172.16.2.91:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
-#jdbc.url=jdbc:mysql://localhost:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
+#jdbc.url=jdbc:mysql://172.20.40.25:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
 
 
 jdbc.username=root
@@ -53,10 +53,11 @@ jdbc.testSql=SELECT 'x' FROM DUAL
 #redis settings
 redis.keyPrefix=pzzndc
 redis.host=172.16.2.91
+#redis.host=172.20.40.25
 redis.port=6379
 redis.password=123456
-redis.timeout=30000
 redis.address=redis://172.16.2.91:6379
+#redis.address=redis://172.20.40.25:6379
 
 #endEatDateOrEndNotEatDate
 pzorder.endDate=16:00:00
@@ -176,3 +177,6 @@ fileUpload = ..\\webapps\\
 
 FileVirtualPath=D:\\Tomcat\\apache-tomcat-8.5.37-windows-x64\\apache-tomcat-8.5.37\\webapps\\
 FilePathWindows=D:\\files\\WHPBD_FORMAL\\mmis_pc
+
+
+projectUrl=pzzndc.crrcpz.cc:9994
