--- a/src/main/resources/rad.properties
+++ b/src/main/resources/rad.properties
@@ -28,6 +28,8 @@ jdbc.type=mysql
 jdbc.driver=com.mysql.cj.jdbc.Driver
 
 jdbc.url=jdbc:mysql://172.16.2.91:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
+
+#客户正式环境
 #jdbc.url=jdbc:mysql://172.20.40.25:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
 
 
@@ -53,10 +55,15 @@ jdbc.testSql=SELECT 'x' FROM DUAL
 #redis settings
 redis.keyPrefix=pzzndc
 redis.host=172.16.2.91
+
+#客户正式环境
 #redis.host=172.20.40.25
+
 redis.port=6379
 redis.password=123456
 redis.address=redis://172.16.2.91:6379
+
+#客户正式环境
 #redis.address=redis://172.20.40.25:6379
 
 #endEatDateOrEndNotEatDate
@@ -180,3 +187,6 @@ FilePathWindows=D:\\files\\WHPBD_FORMAL\\mmis_pc
 
 
 projectUrl=pzzndc.crrcpz.cc:9994
+
+
+helpInfo=1.\u516c\u53f8\u4e3a\u65b9\u4fbf\u672c\u90e8\u5458\u5de5\u8fdb\u884c\u5348\u996d\u5957\u9910\u9884\u5b9a\uff0c\u5b9e\u884c\u7ebf\u4e0a\u5c0f\u7a0b\u5e8f\u7aef\u8fdb\u884c\u9884\u5b9a\u5904\u7406\n2.\u6839\u636e\u672c\u4eba\u5de5\u53f7\u53ca\u8bbe\u5b9a\u7684\u5bc6\u7801\u8fdb\u884c\u767b\u5f55\uff0c\u70b9\u51fb\u201c\u9884\u9009\u5348\u996d\u201d\u6a21\u5757\uff0c\u9009\u62e9\u9910\u5385\uff0c\u7136\u540e\u9009\u62e9\u4e0b\u4e00\u5468\u6bcf\u5929\u60f3\u8981\u9884\u5b9a\u7684\u5957\u9910\n3.\u9884\u5b9a\u8fc7\u540e\uff0c\u6682\u65f6\u4e0d\u652f\u6301\u8865\u8ba2\uff0c\u5982\u6709\u9700\u8981\uff0c\u8bf7\u8054\u7cfb\u90e8\u95e8\u7ba1\u7406\u5458\u8fdb\u884c\u7ebf\u4e0b\u9884\u5b9a\n4.\u4e0b\u5468\u9884\u5b9a\u5957\u9910\u4e2d\uff0c\u5728\u201c\u8ba2\u5355\u7ba1\u7406\u201d\u6a21\u5757\u53ef\u4ee5\u8fdb\u884c\u67e5\u770b\uff0c\u5728\u6b64\u53ef\u53d6\u6d88\u6216\u8005\u91cd\u65b0\u9884\u5b9a\uff08\u5403\u6216\u8005\u4e0d\u5403\uff09\u672a\u6765\u65e5\u671f\u7684\u5957\u9910\uff0c\u4f46\u5f53\u65e5\u5957\u9910\u4e0d\u53ef\u64cd\u4f5c\uff0c\u7cfb\u7edf\u6bcf\u592916:00\u524d\u5f00\u653e\u63d0\u4ea4\uff0c\u5982\u9519\u8fc7\u63d0\u4ea4\u65f6\u95f4\uff0c\u53ef\u5728\u660e\u65e5\u96f6\u65f6\u7cfb\u7edf\u91cd\u65b0\u5f00\u653e\u64cd\u4f5c\u529f\u80fd
