修改吃不吃接口 添加点餐接口点餐截止时间判断

--- a/src/main/resources/rad.properties
+++ b/src/main/resources/rad.properties
@@ -29,7 +29,7 @@ jdbc.driver=com.mysql.cj.jdbc.Driver
 
 jdbc.url=jdbc:mysql://172.16.2.91:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
 
-#¿Í»§ÕýÊ½»·¾³
+#ï¿½Í»ï¿½ï¿½ï¿½Ê½ï¿½ï¿½ï¿½ï¿½
 #jdbc.url=jdbc:mysql://172.20.40.25:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
 
 
@@ -56,18 +56,19 @@ jdbc.testSql=SELECT 'x' FROM DUAL
 redis.keyPrefix=pzzndc
 redis.host=172.16.2.91
 
-#¿Í»§ÕýÊ½»·¾³
+#ï¿½Í»ï¿½ï¿½ï¿½Ê½ï¿½ï¿½ï¿½ï¿½
 #redis.host=172.20.40.25
 
 redis.port=6379
 redis.password=123456
 redis.address=redis://172.16.2.91:6379
 
-#¿Í»§ÕýÊ½»·¾³
+#ï¿½Í»ï¿½ï¿½ï¿½Ê½ï¿½ï¿½ï¿½ï¿½
 #redis.address=redis://172.20.40.25:6379
 
 #endEatDateOrEndNotEatDate
 pzorder.endDate=16:00:00
+pzorder.orderEndDate=00:00:00
 
 
 
