1.统计排序修改 2.当日订单去除不吃人员

--- a/src/main/resources/rad.properties
+++ b/src/main/resources/rad.properties
@@ -87,7 +87,8 @@ ws.ip=127.0.0.1
 #============================#
 
 #\u4EA7\u54C1\u4FE1\u606F\u8BBE\u7F6E
-copyrightYear=2020
+productName=\u6d66\u9547\u516c\u53f8\u667a\u80fd\u70b9\u9910\u7cfb\u7edf
+copyrightYear=2021
 version=V1.0
 
 #\u90AE\u4EF6\u914D\u7F6E
