1.部门查询直接从数据库获取

--- a/src/main/resources/rad.properties
+++ b/src/main/resources/rad.properties
@@ -27,7 +27,7 @@ jdbc.type=mysql
 # mysql8 \uFFFD\u6C7E\u0434\uFFFD\uFFFD
 jdbc.driver=com.mysql.cj.jdbc.Driver
 
-jdbc.url=jdbc:mysql://localhost:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
+jdbc.url=jdbc:mysql://172.16.2.91:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
 
 #正式
 #jdbc.url=jdbc:mysql://172.20.40.25:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
