--- a/src/main/resources/rad.properties
+++ b/src/main/resources/rad.properties
@@ -27,15 +27,16 @@ jdbc.type=mysql
 # mysql8 \uFFFD\u6C7E\u0434\uFFFD\uFFFD
 jdbc.driver=com.mysql.cj.jdbc.Driver
 
-jdbc.url=jdbc:mysql://127.0.0.1:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
+jdbc.url=jdbc:mysql://127.0.0.1:3306/sys?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
 
 #正式
 #jdbc.url=jdbc:mysql://172.20.40.25:3306/2021pzdc?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=false&nullCatalogMeansCurrent=true&allowMultiQueries=true
 
 
 jdbc.username=root
-jdbc.password=KF@32rjb
-# jdbc.password=root
+#jdbc.password=KF@32rjb
+ jdbc.password=123456
 
 #mssql database settings
 #jdbc.type=mssql
